--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
+    "@reach/router": "^1.2.1",
     "firebase": "^5.5.6",
     "react": "^16.7.0-alpha.0",
+    "react-beautiful-dnd": "^10.0.2",
     "react-dom": "^16.7.0-alpha.0",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.5",
